[package]
authors = ["Alvin Meng <alvin.q.meng@gmail.com>"]
edition = "2018"
name = "engine-config"
version = "0.1.0"

[dependencies]
hashlink = { version = "0.7", features = ["serde_impl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.21", features = ["derive"] }
